# smol_webhook

./: Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs
