[package]
name = "smol_webhook"
version = "0.1.0"
authors = ["Tanapol Prucksakorn <tanapol.pr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "smol_webhook"
path = "src/lib.rs"

[dependencies]
serde_json = "1.0.48"
rust-crypto = "0.2.36"
